# FastWaveBackend

./: .gitignore  Cargo.toml  LICENSE-YEHOWSHUA  README.md
examples/: parse_vcd.rs  vcd.rs  vcd1.rs  vcd2.rs
src/: lib.rs  main.rs  test.rs  vcd.rs
src/test/: files.rs
src/vcd/: parse.rs  reader.rs  signal.rs  types.rs  utilities.rs
src/vcd/parse/: combinator_atoms.rs  events.rs  metadata.rs  scopes.rs  types.rs
test-vcd-files/: sources.csv
test-vcd-files/aldec/: SPI_Write.vcd
test-vcd-files/amaranth/: up_counter.vcd
test-vcd-files/ghdl/: pcpu.vcd
test-vcd-files/quartus/: mipsHardware.vcd
test-vcd-files/questa-sim/: test.vcd
test-vcd-files/riviera-pro/: dump.vcd
test-vcd-files/systemc/: waveform.vcd
test-vcd-files/vcs/: processor.vcd
test-vcd-files/verilator/: vlt_dump.vcd
test-vcd-files/vivado/: iladata.vcd
tests/: files.rs  integration_test.rs
tests/vcd-files/: VCD_file_with_errors.vcd  scope_with_comment.vcd  sources.csv
tests/vcd-files/ghdl/: alu.vcd  idea.vcd
tests/vcd-files/gtkwave-analyzer/: perm_current.vcd
tests/vcd-files/icarus/: rv32_soc_TB.vcd
tests/vcd-files/model-sim/: CPU_Design.msim.vcd  clkdiv2n_tb.vcd
tests/vcd-files/my-hdl/: Simple_Memory.vcd  sigmoid_tb.vcd  top.vcd
tests/vcd-files/ncsim/: ffdiv_32bit_tb.vcd
tests/vcd-files/quartus/: wave_registradores.vcd
tests/vcd-files/questa-sim/: dump.vcd
tests/vcd-files/vcs/: Apb_slave_uvm_new.vcd  datapath_log.vcd
tests/vcd-files/xilinx_isim/: test.vcd
