[package]
name = "fastwave"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
clap = { version = "3.1.8", features = ["derive"] }
chrono = "0.4"
itertools = "0.10.3"
backtrace = "0.3"