[package]
name = "fastwave_backend"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
clap = { version = "4.4.6", features = ["derive"] }
chrono = "0.4"
# TODO : remove itertools once date parser is reworked.
itertools = "0.11"
